feat: 添加 Google 站点验证 meta 标签
- 添加 google-site-verification meta 标签
- 确保网站能被 Google 正确索引和验证

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     
     <!-- SEO -->
     <meta name="robots" content="index, follow" />
+    <meta name="google-site-verification" content="RyRXrwuTtQMF5eVkzMqVpQEqzQ5R_9uZ9j1yWItK_Mw" />
     <link rel="canonical" href="https://gjson-path-finder.vercel.app" />
     
     <!-- Favicon -->
